--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,8 @@
 {
   "env": {
-    "es6": true
+    "es6": true,
+    "browser": true
   },
-  "rules": {
-    "no-var": "error",
-    "semi": "error",
-    "indent": "error",
-    "no-multi-spaces": "error",
-    "space-in-parens": "error",
-    "no-multiple-empty-lines": "error",
-    "prefer-const": "error",
-    "no-use-before-define": "error"
-  }
+  "plugin": ["@nodeart"],
+  "extends": ["plugin:@nodeart/base"]
 }
