--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,5 @@
 {
-  "semi": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "arrowParens": "avoid"
 }
