--- a/package.json
+++ b/package.json
@@ -4,33 +4,13 @@
   "description": "weblabs",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint **/*.js",
-    "lint:fix": "eslint **/*.js --fix",
-    "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write .",
+    "lint": "eslint **/*.js --ignore-path .gitignore",
+    "lint:fix": "eslint **/*.js --fix --ignore-path .gitignore",
+    "prettier": "prettier --check . --ignore-path ./.prettierignore",
+    "prettier:fix": "prettier --write . --ignore-path ./.prettierignore",
     "format": "stylelint **/*.css",
     "format:fix": "stylelint **/*.css --fix",
     "prepare": "husky install"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npx lint-staged --allow-empty"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,html}": [
-      "prettier --check ."
-    ],
-    "*.{js,ts}": [
-      "eslint **/*.js"
-    ],
-    "*.css": [
-      "stylelint **/*.css"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/voonya/webLabs.git"
   },
   "author": "",
   "license": "ISC",
