--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "lint": "eslint **/*.js --ignore-path .gitignore",
     "lint:fix": "eslint **/*.js --fix --ignore-path .gitignore",
-    "prettier": "prettier --check . --ignore-path ./.prettierignore",
-    "prettier:fix": "prettier --write . --ignore-path ./.prettierignore",
-    "format": "stylelint **/*.css",
-    "format:fix": "stylelint **/*.css --fix",
+    "format": "prettier --check . --ignore-path ./.prettierignore",
+    "format:fix": "prettier --write . --ignore-path ./.prettierignore",
+    "stylelint": "stylelint **/*.css --ignore-path .gitignore",
+    "stylelint:fix": "stylelint **/*.css --fix --ignore-path .gitignore",
     "prepare": "husky install"
   },
   "author": "",
