--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
+my-app/build
+my-app/.svelte-kit
+my-app/package
+.DS_Store
+my-app/node_modules
+node_modules
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
