--- a/my-app/firebase.json
+++ b/my-app/firebase.json
@@ -1,9 +1,11 @@
 {
-	"functions": {
-		"predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"]
-	},
-	"hosting": {
-		"public": "build",
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
+  },
+  "hosting": {
+    "public": "build",
 		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
 		"rewrites": [
 			{
@@ -11,5 +13,5 @@
 				"functions": "sendmail"
 			}
 		]
-	}
+  }
 }
