--- a/my-app/package.json
+++ b/my-app/package.json
@@ -27,6 +27,7 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
+		"cors": "^2.8.5",
 		"nodemailer": "^6.7.0"
 	}
 }
