--- a/lab2/firebase.json
+++ b/lab2/firebase.json
@@ -1,13 +1,18 @@
 {
   "functions": {
+    "source": "functions",
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
     ]
   },
   "hosting": {
     "public": "build",
-		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-		"rewrites": [
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
 			{
 				"source": "/api/sendmail",
 				"functions": "sendmail"
