--- a/lab2/package.json
+++ b/lab2/package.json
@@ -1,33 +1,30 @@
 {
-	"name": "my-app",
+	"name": "lab2",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"eslint": "eslint . --ignore-path .gitignore"
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^1.0.0-next.20",
+		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"@sveltejs/kit": "next",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"firebase-tools": "^9.20.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"sass": "^1.42.1",
 		"svelte": "^3.34.0",
-		"svelte-preprocess": "^4.9.5"
+		"svelte-preprocess": "^4.9.8"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
-		"cors": "^2.8.5",
-		"nodemailer": "^6.7.0"
+		"firebase-tools": "^9.20.0"
 	}
 }
