--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,4 +15,4 @@ jobs:
                   repoToken: '${{ secrets.GITHUB_TOKEN }}'
                   firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LAB2_E8ED8 }}'
                   projectId: lab2-e8ed8
-                  entryPoint: '.lab2/'
+                  entryPoint: '.build/'
