--- a/lab2/package.json
+++ b/lab2/package.json
@@ -21,13 +21,11 @@
 		"prettier-plugin-svelte": "^2.4.0",
 		"sass": "^1.42.1",
 		"svelte": "^3.34.0",
-		"svelte-preprocess": "^4.9.8"
-	},
-	"type": "module",
-	"dependencies": {
+		"svelte-preprocess": "^4.9.8",
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
 		"firebase-tools": "^9.20.0"
-	}
+	},
+	"type": "module"
 }
