--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint:fix": "eslint **/*.js --fix --ignore-path .gitignore",
     "format": "prettier --check . --ignore-path ./.prettierignore",
     "format:fix": "prettier --write . --ignore-path ./.prettierignore",
-    "stylelint": "stylelint **/*.css --ignore-path .gitignore",
-    "stylelint:fix": "stylelint **/*.css --fix --ignore-path .gitignore"
+    "stylelint": "stylelint **/*.scss --ignore-path .gitignore",
+    "stylelint:fix": "stylelint **/*.scss --fix --ignore-path .gitignore"
   },
   "repository": {
     "type": "git",
