--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/voonya/webLabs#readme",
   "devDependencies": {
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "2.4.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0"
