--- a/lab2/package.json
+++ b/lab2/package.json
@@ -6,9 +6,7 @@
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"deploy:gh": "npm run build:gh && npx gh-pages -d .svelte-kit/static/build -t true",
-		"build:gh": "svelte-kit build && touch .svelte-kit/static/build/.nojekyll"
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
