--- a/lab2/package.json
+++ b/lab2/package.json
@@ -9,21 +9,21 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@fontsource/fira-mono": "^4.5.0",
+		"@lukeed/uuid": "^2.0.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"@sveltejs/kit": "next",
+		"cookie": "^0.4.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"firebase-tools": "^9.20.0",
 		"gh-pages": "^3.2.3",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"sass": "^1.42.1",
 		"svelte": "^3.34.0",
-		"svelte-preprocess": "^4.9.8",
-		"@fontsource/fira-mono": "^4.5.0",
-		"@lukeed/uuid": "^2.0.0",
-		"cookie": "^0.4.1",
-		"firebase-tools": "^9.20.0"
+		"svelte-preprocess": "^4.9.8"
 	},
 	"type": "module"
 }
