--- a/lab2/package.json
+++ b/lab2/package.json
@@ -5,8 +5,12 @@
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"lint": "eslint **/*.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
+    	"lint:fix": "eslint **/*.js --fix --ignore-path .gitignore",
+    	"format": "prettier --check . --ignore-path ./.prettierignore",
+    	"format:fix": "prettier --write . --ignore-path ./.prettierignore",
+    	"stylelint": "stylelint **/*.scss --ignore-path .gitignore",
+    	"stylelint:fix": "stylelint **/*.scss --fix --ignore-path .gitignore"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
