--- a/lab2/package.json
+++ b/lab2/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "next",
 		"cookie": "^0.4.1",
 		"eslint": "^7.32.0",
+		"eslint-config-google": "^0.14.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"firebase-tools": "^9.20.0",
