--- a/lab2/.eslintrc.json
+++ b/lab2/.eslintrc.json
@@ -11,5 +11,8 @@
       "no-multiple-empty-lines": "error",
       "prefer-const": "error",
       "no-use-before-define": "error"
-    }
+    },
+    "parserOptions": {
+      "sourceType": "module"
+  }
 }
