--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"sass": "^1.42.1",
+		"stylelint": "^14.0.1",
+		"stylelint-config-standard": "^23.0.0",
 		"svelte": "^3.34.0",
 		"svelte-preprocess": "^4.9.8"
 	},
