--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "firebase-tools": "^9.20.0",
     "prettier": "^2.4.1",
