--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,6 +14,7 @@ jobs:
                 node-version: '16'
                 cache: 'npm'
             - run: npm ci && npm run build
+              working-directory: lab2
             - uses: FirebaseExtended/action-hosting-deploy@v0
               with:
                   repoToken: '${{ secrets.GITHUB_TOKEN }}'
