--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .DS_Store
-node_modules
+
 lab2/build
 lab2/.svelte-kit
 lab2/package
 lab2/.firebase
 lab2/functions/.runtimeconfig.json
 *.log
-
 lab2/node_modules
+/node_modules
 # Logs
 logs
 *.log
