--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.DS_Store
-
 lab2/build
 lab2/.svelte-kit
 lab2/package
@@ -7,7 +5,7 @@ lab2/.firebase
 lab2/functions/.runtimeconfig.json
 *.log
 lab2/node_modules
-/node_modules
+//node_modules
 # Logs
 logs
 *.log
