--- a/lab2/package.json
+++ b/lab2/package.json
@@ -31,8 +31,5 @@
     "svelte": "^3.34.0",
     "svelte-preprocess": "^4.9.8"
   },
-  "type": "module",
-  "dependencies": {
-    "svelte-preprocess": "^4.9.8"
-  }
+  "type": "module"
 }
