--- a/lab2/.eslintrc.json
+++ b/lab2/.eslintrc.json
@@ -7,7 +7,7 @@
   "rules": {
     "prettier/prettier": "error"
   },
-  "plugins": ["prettier", "sonarjs"],
+  "plugins": ["sonarjs"],
   "extends": ["eslint:recommended", "prettier", "plugin:sonarjs/recommended"],
   "parserOptions": {
     "sourceType": "module",
