--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "weblabs",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint **/*.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
-    "lint:fix": "eslint **/*.js --fix --ignore-path .gitignore",
-    "format": "prettier --check . --ignore-path ./.prettierignore",
-    "format:fix": "prettier --write . --ignore-path ./.prettierignore",
-    "stylelint": "stylelint **/*.css --ignore-path .gitignore",
-    "stylelint:fix": "stylelint **/*.css --fix --ignore-path .gitignore",
+    "lint": "eslint . --ignore-path .gitignore --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint . --fix --ignore-path .gitignore",
+    "format": "prettier --check . --ignore-path .gitignore",
+    "format:fix": "prettier --write . --ignore-path .gitignore",
+    "stylelint": "stylelint **/*.{css,scss,sass} --ignore-path .gitignore",
+    "stylelint:fix": "stylelint **/*.{css,scss,sass} --fix --ignore-path .gitignore",
     "prepare": "husky install"
   },
   "author": "",
@@ -24,7 +24,8 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
-    "prettier": "2.4.0",
+    "prettier": "^2.4.0",
+    "prettier-plugin-svelte": "^2.5.0",
     "sonarjs": "^1.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0"
