--- a/lab3/.gitignore
+++ b/lab3/.gitignore
@@ -1,8 +1,9 @@
 .DS_Store
 node_modules
-lab3/build
-lab3/.svelte-kit
-lab3/.svelte-kit
+/build
+/.svelte-kit
 /package
-.firebase/
 .env
+.env.*
+.vercel
+.output
