--- a/lab3/package.json
+++ b/lab3/package.json
@@ -4,20 +4,26 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview"
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-static": "^1.0.0-next.21",
     "@sveltejs/kit": "next",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
-    "prettier": "^2.5.0",
+    "prettier": "^2.4.1",
+    "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.42.1",
-    "svelte": "^3.34.0",
+    "svelte": "^3.44.0",
     "svelte-preprocess": "^4.9.8"
   },
   "type": "module",
   "dependencies": {
-    "@apollo/client": "^3.4.17",
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "@urql/svelte": "^1.3.2",
