--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           VITE_HASURA_ADMIN: '${{ secrets.VITE_HASURA_ADMIN }}'
           VITE_API_HTTPS_ENDPOINT: '${{ secrets.VITE_API_HTTPS_ENDPOINT }}'
-          VITE_API_WSS_ENDPOINT: '${{ VITE_API_WSS_ENDPOINT }}'
+          VITE_API_WSS_ENDPOINT: '${{ secrets.VITE_API_WSS_ENDPOINT }}'
         working-directory: lab3
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
