--- a/lab3/package.json
+++ b/lab3/package.json
@@ -28,6 +28,7 @@
     "@lukeed/uuid": "^2.0.0",
     "@urql/svelte": "^1.3.2",
     "cookie": "^0.4.1",
+    "firebase-tools": "^9.23.0",
     "graphql": "^15.7.2",
     "graphql-ws": "^5.5.5",
     "urql": "^2.0.5"
