--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-*/build
-*/.svelte-kit
-*/package
-*/.firebase
-*/functions/.runtimeconfig.json
+build/
+.svelte-kit/
+package/
+.firebase/
+functions/.runtimeconfig.json
 *.log
-*/node_modules
+node_modules/
 # Logs
 logs
 *.log
