--- a/lab3/package.json
+++ b/lab3/package.json
@@ -20,7 +20,8 @@
     "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.42.1",
     "svelte": "^3.44.0",
-    "svelte-preprocess": "^4.9.8"
+    "svelte-preprocess": "^4.9.8",
+    "firebase-tools": "^9.23.0"
   },
   "type": "module",
   "dependencies": {
@@ -28,7 +29,6 @@
     "@lukeed/uuid": "^2.0.0",
     "@urql/svelte": "^1.3.2",
     "cookie": "^0.4.1",
-    "firebase-tools": "^9.23.0",
     "graphql": "^15.7.2",
     "graphql-ws": "^5.5.5",
     "urql": "^2.0.5"
