--- a/.github/workflows/firebase-deploy-lab3.yml
+++ b/.github/workflows/firebase-deploy-lab3.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting on PR
+name: Deploy lab3
 'on': pull_request
 jobs:
   build_and_preview:
@@ -14,11 +14,11 @@ jobs:
         env:
           VITE_HASURA_ADMIN: '${{ secrets.VITE_HASURA_ADMIN }}'
           VITE_API_HTTPS_ENDPOINT: '${{ secrets.VITE_API_HTTPS_ENDPOINT }}'
-          VITE_API_WSS_ENDPOINT: '${{ VITE_API_WSS_ENDPOINT }}'
+          VITE_API_WSS_ENDPOINT: '${{ secrets.VITE_API_WSS_ENDPOINT }}'
         working-directory: lab3
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_LAB3 }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NEWTWITER_CA45B }}'
           projectId: newtwiter-ca45b
           entryPoint: ./lab3
