--- a/lab2/package.json
+++ b/lab2/package.json
@@ -25,6 +25,7 @@
     "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.42.1",
     "stylelint": "^14.0.1",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^23.0.0",
     "svelte": "^3.34.0",
     "svelte-preprocess": "^4.9.8"
