--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint:fix": "eslint . --fix --ignore-path .gitignore",
     "format": "prettier --check **/*.js --ignore-path .gitignore",
     "format:fix": "prettier --write **/*.js --ignore-path .gitignore",
-    "stylelint": "stylelint **/*.{css,scss} --ignore-path .gitignore",
-    "stylelint:fix": "stylelint **/*.{css,scss} --fix --ignore-path .gitignore",
+    "stylelint": "stylelint **/*.css --ignore-path .gitignore --aei",
+    "stylelint:fix": "stylelint **/*.css --fix --ignore-path .gitignore --aei",
     "prepare": "husky install"
   },
   "author": "",
