--- a/.github/workflows/firebase-deploy-lab4.yml
+++ b/.github/workflows/firebase-deploy-lab4.yml
@@ -13,11 +13,11 @@ jobs:
               with:
                 node-version: '16'
                 cache: 'npm'
-            - run: npm ci && npm run build
-              working-directory: lab2
+            - run: npm ci
+              working-directory: lab4
             - uses: FirebaseExtended/action-hosting-deploy@v0
               with:
                   repoToken: '${{ secrets.GITHUB_TOKEN }}'
                   firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BURGERANDSWIPER }}'
-                  projectId: lab2-e8ed8
-                  entryPoint: ./lab2
+                  projectId: burgerandswiper
+                  entryPoint: ./lab4
