--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nodeart/eslint-plugin": "^1.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-sonarjs": "^0.10.0",
+    "firebase-tools": "^10.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "2.4.0",
