--- a/lab5/package.json
+++ b/lab5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab3",
+  "name": "lab5",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -16,21 +16,18 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "firebase-tools": "^9.23.0",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.42.1",
     "svelte": "^3.44.0",
-    "svelte-preprocess": "^4.9.8",
-    "firebase-tools": "^9.23.0"
+    "svelte-preprocess": "^4.9.8"
   },
   "type": "module",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.19.3",
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
-    "@urql/svelte": "^1.3.2",
-    "cookie": "^0.4.1",
-    "graphql": "^15.7.2",
-    "graphql-ws": "^5.5.5",
-    "urql": "^2.0.5"
+    "cookie": "^0.4.1"
   }
 }
