--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.4.0",
+    "prettier": "2.4.0",
     "prettier-plugin-svelte": "^2.5.0",
     "sonarjs": "^1.0.0",
     "stylelint": "^13.13.1",
